--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -102,7 +102,6 @@ html {
     .book-menu-content {
       width: $menu-width;
       padding: $padding-16;
-      padding-top: 3rem;
       background: var(--body-background);
   
       @include fixed;
